test/liftedConsuming5.slq

def main() {
    x := H(1:ğ”¹);
    y := !X(x); /// error
}
